{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 267,
  "lineage": "240ddd95-7a33-844b-1895-45978b6a6ec3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:internet-gateway/igw-07e70de43e26c610a",
            "id": "igw-07e70de43e26c610a",
            "owner_id": "916955218910",
            "tags": {
              "Name": "gateway"
            },
            "tags_all": {
              "Name": "gateway"
            },
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:916955218910:loadbalancer/app/application-load-balancer/9c07815c43a5d353",
            "arn_suffix": "app/application-load-balancer/9c07815c43a5d353",
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-load-balancer-1485440634.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:916955218910:loadbalancer/app/application-load-balancer/9c07815c43a5d353",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a0a2c530017d664a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-060e8304871879fdf"
              },
              {
                "subnet_id": "subnet-09798750617e30ed4"
              },
              {
                "subnet_id": "subnet-0e6df207333e72f17"
              }
            ],
            "subnets": [
              "subnet-060e8304871879fdf",
              "subnet-09798750617e30ed4",
              "subnet-0e6df207333e72f17"
            ],
            "tags": {
              "Name": "application-loadbalancer"
            },
            "tags_all": {
              "Name": "application-loadbalancer"
            },
            "vpc_id": "vpc-0a3d330ae617af717",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:916955218910:listener/app/application-load-balancer/9c07815c43a5d353/bde45163a5c94a03",
            "certificate_arn": "arn:aws:acm:us-east-1:916955218910:certificate/8ec495d2-4a3f-4489-bdde-a34a606d0345",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:916955218910:targetgroup/webapp-lb-target-group/0d9f5d713f460d0b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:916955218910:listener/app/application-load-balancer/9c07815c43a5d353/bde45163a5c94a03",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:916955218910:loadbalancer/app/application-load-balancer/9c07815c43a5d353",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_load_balancer",
            "aws_lb_target_group.alb_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:916955218910:targetgroup/webapp-lb-target-group/0d9f5d713f460d0b",
            "arn_suffix": "targetgroup/webapp-lb-target-group/0d9f5d713f460d0b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 100,
                "matcher": "200",
                "path": "/healthz",
                "port": "3030",
                "protocol": "HTTP",
                "timeout": 50,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:916955218910:targetgroup/webapp-lb-target-group/0d9f5d713f460d0b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-lb-target-group",
            "port": 3030,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:route-table/rtb-039293f35dea72315",
            "id": "rtb-039293f35dea72315",
            "owner_id": "916955218910",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Subnet Route Table"
            },
            "tags_all": {
              "Name": "Private Subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:route-table/rtb-0e44c83afffee960d",
            "id": "rtb-0e44c83afffee960d",
            "owner_id": "916955218910",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e70de43e26c610a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table"
            },
            "tags_all": {
              "Name": "Public Subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f14b9574560bb44e",
            "route_table_id": "rtb-039293f35dea72315",
            "subnet_id": "subnet-0cd0da600b9918dcc"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.private",
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb87122f8342c952",
            "route_table_id": "rtb-039293f35dea72315",
            "subnet_id": "subnet-046d56c2758560a16"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.private",
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88ecc1fda3cbe5f",
            "route_table_id": "rtb-039293f35dea72315",
            "subnet_id": "subnet-0c73b4f47fcb267fe"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.private",
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0925fb00e3a9df171",
            "route_table_id": "rtb-0e44c83afffee960d",
            "subnet_id": "subnet-09798750617e30ed4"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.rt_public",
            "aws_subnet.public",
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7c213098ce29dea",
            "route_table_id": "rtb-0e44c83afffee960d",
            "subnet_id": "subnet-0e6df207333e72f17"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.rt_public",
            "aws_subnet.public",
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cef3f5880ceb39ac",
            "route_table_id": "rtb-0e44c83afffee960d",
            "subnet_id": "subnet-060e8304871879fdf"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.rt_public",
            "aws_subnet.public",
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:security-group/sg-0a0a2c530017d664a",
            "description": "security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0a2c530017d664a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_security_group20230413231112008800000004",
            "name_prefix": "load_balancer_security_group",
            "owner_id": "916955218910",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load_balancer_security_group"
            },
            "tags_all": {
              "Name": "load_balancer_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:security-group/sg-017649450274a603b",
            "description": "Security group for ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017649450274a603b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3030,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0a2c530017d664a"
                ],
                "self": false,
                "to_port": 3030
              }
            ],
            "name": "WebAppSecurityGroup",
            "name_prefix": "",
            "owner_id": "916955218910",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application Security Group"
            },
            "tags_all": {
              "Name": "application Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.vpc_demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:security-group/sg-07f7d6d84575f67da",
            "description": "Security group for database - postgres",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f7d6d84575f67da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017649450274a603b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sg_database20230413231118692200000005",
            "name_prefix": "sg_database",
            "owner_id": "916955218910",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database Security Group"
            },
            "tags_all": {
              "Name": "database Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_security_group.sg",
            "aws_vpc.vpc_demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:subnet/subnet-0cd0da600b9918dcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd0da600b9918dcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916955218910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "dependencies": [
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:subnet/subnet-046d56c2758560a16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046d56c2758560a16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916955218910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "dependencies": [
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:subnet/subnet-0c73b4f47fcb267fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c73b4f47fcb267fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916955218910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-3"
            },
            "tags_all": {
              "Name": "private-3"
            },
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "dependencies": [
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:subnet/subnet-09798750617e30ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09798750617e30ed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916955218910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "dependencies": [
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:subnet/subnet-0e6df207333e72f17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6df207333e72f17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916955218910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "dependencies": [
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:subnet/subnet-060e8304871879fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060e8304871879fdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916955218910",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-3"
            },
            "tags_all": {
              "Name": "public-3"
            },
            "vpc_id": "vpc-0a3d330ae617af717"
          },
          "dependencies": [
            "aws_vpc.vpc_demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916955218910:vpc/vpc-0a3d330ae617af717",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aeefc1192808683e",
            "default_route_table_id": "rtb-08b0074759c505d0e",
            "default_security_group_id": "sg-0e51d4d50bcdaf575",
            "dhcp_options_id": "dopt-052a519df5f8b4210",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3d330ae617af717",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b0074759c505d0e",
            "owner_id": "916955218910",
            "tags": {
              "Name": "vpc_demo"
            },
            "tags_all": {
              "Name": "vpc_demo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}